force-app/main/default/objects/Approval_Rule__c/Approval_Rule__c.object-meta.xml
<CustomObject>
    <label>Approval Rule</label>
    <nameField>
        <label>business</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>