force-app/main/default/objects/Approval_Rule__c/fields/Business__c.field-meta.xml
<CustomField>
    <fullName>Business__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business</label>
    <referenceTo>Approver__c</referenceTo>
    <relationshipLabel>Approval Rule</relationshipLabel>
    <relationshipName>Approval_Rule</relationshipName>
    <type>Lookup</type>
</CustomField>