force-app/main/default/objects/Approval_Rule__c/fields/grade_from__c.field-meta.xml
<CustomField>
    <fullName>grade_from__c</fullName>
    <label>grade from</label>
    <length>100</length>
    <type>Text</type>
</CustomField>