force-app/main/default/objects/Approval_Rule__c/fields/grade_to__c.field-meta.xml
<CustomField>
    <fullName>grade_to__c</fullName>
    <label>grade to</label>
    <length>100</length>
    <type>Text</type>
</CustomField>