force-app/main/default/objects/Approval_Rule__c/fields/limitation_RMB__c.field-meta.xml
<CustomField>
    <fullName>limitation_RMB__c</fullName>
    <label>limitation(RMB)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>